--- a/src/Components/Outlet Details/OutletStepperForm/OutletStepperForm.scss
+++ b/src/Components/Outlet Details/OutletStepperForm/OutletStepperForm.scss
@@ -291,7 +291,7 @@
     transform: translateX(250px);
     height: 240px;
     width: 900px;
-    border: 1px solid red;
+    // border: 1px solid red;
   }
 
   .sub-container {
